Added link to Amplitude vs Resonance guide

--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -1,55 +1,69 @@
 # Amplitude vs Resonance (Updated for DLC)
 
 Guide by: ThatGuyLegit, with contributions from ConRaven and Alexij.
-Last updated: 2024-02-23
+
+_Last updated: 2024-02-23_
 
 ## Archetypes
 
-- Alchemist
-  - Skills (All) - **Amplitude**
-- Archon
-  - Skills
-    - Reality Rune - 7m > 10.5m **Amplitude**
-    - Chaos Gate - 7m > 10.5m **Amplitude**
-    - Havoc Form
-      - Aim - 3m > 4.5m **Resonance**
-      - Dodge - 5m > 7.5m **Amplitude**
-- Challenger
-  - Skills
-    - War Stomp - 7.5m -> 11.25m **Amplitude**
-  - Perks
-    - Intimidating Presence - 15m > 22.5m **Resonance**
-- Engineer
-  - Skills
-    - Impact Cannon **Amplitude**
-    - Flame Turret _Range of acquired target_ 10m -> 15m _EST_ **Amplitude**
-    - Flame Turret - 2m -> 3m **Amplitude**
-- Explorer
-  - Skills
-    - Gold Digger - 5m > 10m **Resonance**
-  - Perks
-    - Magnetic Field 2.5m -> 3.75m **Resonance**
+### Alchemist
+
+- Skills (All) **Amplitude**
+
+### Archon
+
+- Skills
+  - Reality Rune - 7m > 10.5m **Amplitude**
+  - Chaos Gate - 7m > 10.5m **Amplitude**
+- Havoc Form
+  - Aim - 3m > 4.5m **Resonance**
+  - Dodge - 5m > 7.5m **Amplitude**
+
+### Challenger
+
+- Skills
+  - War Stomp - 7.5m -> 11.25m **Amplitude**
+- Perks
+  - Intimidating Presence - 15m > 22.5m **Resonance**
+
+### Engineer
+
+- Skills
+  - Impact Cannon **Amplitude**
+  - Flame Turret _Range of acquired target_ 10m -> 15m _EST_ **Amplitude**
+  - Flame Turret - 2m -> 3m **Amplitude**
+
+### Explorer
+
+- Skills
+  - Gold Digger - 5m > 10m **Resonance**
+- Perks
+  - Magnetic Field 2.5m -> 3.75m **Resonance**
 - Hunter
   - Skills
     - Hunter's Shroud - 10m > 15m **Resonance**
-- Medic
-  - Skills
-    - Wellspring - 3m > 4.5m **Amplitude**
-    - Healing Shield - 25m > 37.5m **Amplitude**
-    - Redemption - 30m > 45m **Amplitude**
+
+### Medic
+
+- Skills
+  - Wellspring - 3m > 4.5m **Amplitude**
+  - Healing Shield - 25m > 37.5m **Amplitude**
+  - Redemption - 30m > 45m **Amplitude**
 - Ritualist
   - Perks
     - Vile - 15m > 22.5m **Amplitude**
   - Skills
     - Eruption - 1m/15m > 1.5m/22.5m **Amplitude**
     - Miasma - 15m > 22.5m **Amplitude**
-- Summoner
-  - Skills
-    - Hollow - 5m > 7.5m **Amplitude**
-    - Flyer - 3m > 4.5m **Amplitude**
-    - Frank - 6m > 9m
 
-## Amulets
+### Summoner
+
+- Skills
+  - Hollow - 5m > 7.5m **Amplitude**
+  - Flyer - 3m > 4.5m **Amplitude**
+  - Frank - 6m > 9m
+
+### Amulets
 
 - Night Weaver's Grudge - 15m > 22.5m **Amplitude**
 - Toxic Release Valve - 7m > 10.5m **Amplitude**
