Added new mods and removed spectral blade

--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -2,7 +2,7 @@
 
 Guide by: ThatGuyLegit, with contributions from ConRaven and Alexij.
 
-_Last updated: 2024-02-23_
+_Last updated: 2024-03-05_
 
 ## Archetypes
 
@@ -99,15 +99,16 @@ _Last updated: 2024-02-23_
 
 - Dreamcatcher - 20m > 30m **Resonance**
 - Labyrinth Staff - 2m > 3m **Resonance**
-- Spectral Blade - 8m > 12m **Resonance**
 
 ## Weapon Mods
 
 - Concussive Shot - 8m > 12m **Resonance**
 - Creeping Mist - 7.5m/15m > 11.25m/22.5m **Amplitude**
+- Cube Room - 5m > 7.5m **Amplitude**
 - Defrag - 5m > 7.5m **Resonance**
 - Familiar - 10m > 15m **Resonance**
 - Firestorm - 10m(?) > 15m **Amplitude**
+- Nano Phase - 2m > 3m **Amplitude**                // Needs testing
 - Prismatic Driver - 3m > 4.5m **Amplitude**
 - Ring of Spears - Massive, Yo! **Resonance**
 - Rotted Arrow - 4m > 6m **Amplitude**
