--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -108,7 +108,7 @@ _Last updated: 2024-03-05_
 - Defrag - 5m > 7.5m **Resonance**
 - Familiar - 10m > 15m **Resonance**
 - Firestorm - 10m(?) > 15m **Amplitude**
-- Nano Phase - 2m > 3m **Amplitude**                // Needs testing
+- Nano Phase - 2m > 3m **Amplitude**        
 - Prismatic Driver - 3m > 4.5m **Amplitude**
 - Ring of Spears - Massive, Yo! **Resonance**
 - Rotted Arrow - 4m > 6m **Amplitude**
