--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -98,7 +98,7 @@ _Last updated: 2024-03-05_
 ## Melee
 
 - Dreamcatcher - 20m > 30m **Resonance**
-- Labyrinth Staff - 2m > 3m **Resonance**
+- Labyrinth Staff - 2m > 3m **Amplitude**
 
 ## Weapon Mods
 
