--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -35,6 +35,10 @@ Engineer has a turret and the Fortify trait for some extra tankiness. The turret
 
 Handler is an excellent choice for your hardcore run. When equipped as the primary archetype, your dog will revive you when you die. This can definitely be a lifesaver, as the cooldown is much shorter than the cheat death provider by the Challenger archetype.
 
+### Medic
+
+Medic can be a strong choice for the self-healing potential for you (and your allies if you are playing with a group).
+
 ### Ritualist
 
 Ritualist is the newest archetype at time of writing, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
