--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -10,10 +10,17 @@ _Last updated: 2024-03-23_
 
 This guide is intended to help players who have some experience with the game, but are new to hardcore. It is not a complete guide to the game, nor is it an exhaustive list of the many strategies you can use to clear hardcore veteran. It is intended to be an opinionated guide to best help you complete your hardcore veteran run.
 
-## Tips before you start
+## General tips
 
 - Picking Apocalypse as your starting difficulty will give you extra gold at the start. You can then reroll your campaign to veteran at the stone.
 - If you want additional easy gold, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
+- You should always have a concoction active, ideally Mudtooth's Tonic.
+- Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
+- Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
+- Gravity kills! Be sure to check down below before dropping off ledges or jumping down!
+- Be sure to keep your game **offline**. Randoms can teamkill you and it will count as a hardcore death.
+- If you are unsure about certain boss fights, keeping a softcore character with the same skills and gear is a good idea to help you practice the fight.
+- Find yourself autopiloting or zoning out? Take a break! Autopilot is a good way to get yourself killed.
 
 ## Picking an archetype
 
@@ -42,3 +49,7 @@ Medic can be a strong choice for the self-healing potential for you (and your al
 ### Ritualist
 
 Ritualist is the newest archetype at time of writing, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
+
+## First things to do in town
+
+TODO
