--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -12,8 +12,8 @@ This guide is intended to help players who have some experience with the game, b
 
 ## General tips
 
-- Picking Apocalypse as your starting difficulty will give you extra gold at the start. You can then reroll your campaign to veteran at the stone.
-- If you want additional easy gold, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
+- Picking Apocalypse as your starting difficulty will give you extra gold awhen you first start. You can then reroll your campaign to veteran at the stone.
+- If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
 - You should always have a concoction active, ideally Mudtooth's Tonic.
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
