--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -22,6 +22,10 @@ This guide is intended to help players who have some experience with the game, b
 - If you are unsure about certain boss fights, keeping a softcore character with the same skills and gear is a good idea to help you practice the fight.
 - Find yourself autopiloting or zoning out? Take a break! Autopilot is a good way to get yourself killed.
 
+## Understanding powerlevels
+
+TODO
+
 ## Picking an archetype
 
 There are many viable archetypes for completing your hardcore veteran run. Any archetypes unlocked on your account will be available either as your starting class, or sold by Wallace and the other respective vendors in town.
@@ -50,6 +54,35 @@ Medic can be a strong choice for the self-healing potential for you (and your al
 
 Ritualist is the newest archetype at time of writing, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
 
+## Recommended archetypes
+
+This guide recommends starting with Engineer, and then picking up Handler as your second archetype. Once you have the Handler, swap it to your primary archetype and put Engineer on your secondary.
+
+## Acquiring your second archetype
+
+You can pick up a second archetype as soon as you have 1500x Scrap and 5 Lumenite. You can then purchase the item from either Wallace or one of the in town vendors. It is recommended that you do this as soon as you have the materials for it.
+
 ## First things to do in town
 
 TODO
+
+## Campaign starting zone
+
+The recommendation is to start your campaign in **Yaesha - Red Palace**. This is because you get the Thaen Fruit by turning in the lockbox to the Empress, which is incredibly helpful for survival as you progress through the campaign. Additionally, you can get the Seal of the Empress Ring for more survivability by showing deference in all dialogs with the Empress.
+
+### Why not Yaesha - Forgotten Grove?
+
+The Forgotten Grove is a commonly recommended starting zone, as you can skip a world boss (Ravager) by killing the Doe. However, the mid-dungeon boss fights are considered more difficult than if you start Red Palace. Additionally, losing access to Thaen Fruit and Seal of the Empress make the Forgotten Grove a less useful starting zone.
+
+## Once you are in Labyrinth
+
+TODO
+
+### Once you have the Biome Portal Key
+
+Once you have the Biome Portal Key, it is recommended that you do the following:
+
+- Grab the Leto Mark II armor set.
+- Open the portals and touch the waypoint in each of the two worlds you can open up. This will lock the powerlevels for those zones ahead of time.
+
+## TODO
