--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -14,17 +14,36 @@ This guide is intended to help players who have some experience with the game, b
 
 - Picking Apocalypse as your starting difficulty will give you extra gold awhen you first start. You can then reroll your campaign to veteran at the stone.
 - If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
-- You should always have a concoction active, ideally Mudtooth's Tonic.
+- You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
+- You can farm the Preacher in **Losomn - Forlorn Coast** to level 3 mutators up to level 10. These do not count towards your power level.
 - Gravity kills! Be sure to check down below before dropping off ledges or jumping down!
 - Be sure to keep your game **offline**. Randoms can teamkill you and it will count as a hardcore death.
 - If you are unsure about certain boss fights, keeping a softcore character with the same skills and gear is a good idea to help you practice the fight.
 - Find yourself autopiloting or zoning out? Take a break! Autopilot is a good way to get yourself killed.
 
-## Understanding powerlevels
+## Understanding power levels
 
-TODO
+### What are power levels?
+
+Powerlevels are used in two ways in Remnant 2:
+
+- Your character has a power level, which is based on the power level of your 2 highest archetypes, and an average of your highest weapon level for each weapon slot.
+
+  _You can check your character's power level by looking on the left side of the character screen._
+
+- The zone you are in has a power level. This level is based upon the power level of your character and/or the minimum power level for the zone. You can check the zone power level by looking at the number on the minimap.
+
+### Why are they important for hardcore?
+
+Power levels are important for hardcore because it will help you to keep the difficulty manageable as you complete your run. This will allow you to reach Annihilation by power level 14 and lock the boss level there, meaning you could outlevel the fight to better ensure a chance of success.
+
+### How do I manage power levels?
+
+Generally speaking, you don't need to worry too much about your archetype power levels, as they level quite slowly. You can keep a [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic) active without much concern.
+
+However, keeping your weapon levels in check is important. Prior to bosses, you want to keep your character power level 1-2 levels below the level of the zone you're in. This will help to ensure you don't accidentally push up the level of the next zone you enter. Once you reach a boss zone, you can freely upgrade your weapons to match, but not exceed, the boss power level.
 
 ## Picking an archetype
 
@@ -64,25 +83,40 @@ You can pick up a second archetype as soon as you have 1500x Scrap and 5 Lumenit
 
 ## First things to do in town
 
-TODO
+When you first load into town, it is suggested that you:
+
+- Sell any items you don't need, which is generally everything except for your Mudtooth's Tonics.
+- Craft the Healing Shot mod to help supplement your heals.
+- If you are able, you should also craft Hot Shot to further increase your damage output.
+- If you have item unlocks from other characters, pick up helpful items from Reggie, such as [Black Cat Band](https://remnant.wiki/Black_Cat_Band).
+- You can get the [MP60-R](https://remnant.wiki/MP60-R) pistol for free in town if you don't like your starting pistol.
 
 ## Campaign starting zone
 
-The recommendation is to start your campaign in **Yaesha - Red Palace**. This is because you get the Thaen Fruit by turning in the lockbox to the Empress, which is incredibly helpful for survival as you progress through the campaign. Additionally, you can get the Seal of the Empress Ring for more survivability by showing deference in all dialogs with the Empress.
+The recommendation is to start your campaign in **Yaesha - Red Palace**. This is because you get the [Thaen Seed](https://remnant.wiki/Thaen_Seed) from the Widow's Court, which is incredibly helpful for survival as you progress through the campaign. Additionally, you can get the [Seal of the Empress](https://remnant.wiki/Seal_of_the_Empress) Ring for more survivability by showing deference in all dialogs with the Empress.
 
 ### Why not Yaesha - Forgotten Grove?
 
 The Forgotten Grove is a commonly recommended starting zone, as you can skip a world boss (Ravager) by killing the Doe. However, the mid-dungeon boss fights are considered more difficult than if you start Red Palace. Additionally, losing access to Thaen Fruit and Seal of the Empress make the Forgotten Grove a less useful starting zone.
 
-## Once you are in Labyrinth
+### Red Palace tips
 
-TODO
+- Be sure you are polite to the Empress in all dialogs so that you can earn the [Seal of the Empress](https://remnant.wiki/Seal_of_the_Empress) ring.
+- When you reach The Widow's Court, be sure to grab the [Ornate Lockbox](https://remnant.wiki/Ornate_Lockbox) and [Ornate Key](https://remnant.wiki/Ornate_Key) so that you can get the [Thaen Seed](https://remnant.wiki/Thaen_Seed) from the Empress. Planting this fruit in town will give you a cheat death fruit.
 
-### Once you have the Biome Portal Key
+## When you first reach Labyrinth
 
-Once you have the Biome Portal Key, it is recommended that you do the following:
+Once you clear the first world on hardcore, you have unlocked the [Ahanae Crystal](https://remnant.wiki/Ahanae_Crystal) ring. You can purchase it from Reggie, and should consider doing so right away.
 
-- Grab the Leto Mark II armor set.
+Additionally, you can immediately get the [Energized Neck Coil](https://remnant.wiki/Energized_Neck_Coil) that can be quite helpful depending on your archetypes.
+
+### Once you have the Biome Portal Key in Labyrinth
+
+Once you have the [Biome Portal Key](https://remnant.wiki/Biome_Portal_Key), it is recommended that you do the following:
+
+- Grab the [Leto Mark II armor set](https://remnant.wiki/Leto_Mark_II_Armor).
 - Open the portals and touch the waypoint in each of the two worlds you can open up. This will lock the powerlevels for those zones ahead of time.
 
-## TODO
+## Things to look out for as you progress
+
+- If you happen to roll both Morrow's Parrish in Losomn and Seeker's Rest in N'Erud, you can get the [Tranquil Heart](https://remnant.wiki/Tranquil_Heart) relic to greatly increase your survival.
