--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -111,7 +111,7 @@ Once you clear the first world on hardcore, you have unlocked the [Ahanae Crysta
 
 Additionally, you can immediately get the [Energized Neck Coil](https://remnant.wiki/Energized_Neck_Coil) that can be quite helpful depending on your archetypes.
 
-### Once you have the Biome Portal Key in Labyrinth
+## Once you have the Biome Portal Key in Labyrinth
 
 Once you have the [Biome Portal Key](https://remnant.wiki/Biome_Portal_Key), it is recommended that you do the following:
 
