--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -44,7 +44,7 @@ Power levels are important for hardcore because it will help you to keep the dif
 
 Generally speaking, you don't need to worry too much about your archetype power levels, as they level quite slowly. You can keep a [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic) active without much concern.
 
-However, keeping your weapon levels in check is important. Prior to bosses, you want to keep your character power level 1-2 levels below the level of the zone you're in. This will help to ensure you don't accidentally push up the level of the next zone you enter. Once you reach a boss zone, you can freely upgrade your weapons to match, but not exceed, the boss power level.
+However, keeping your weapon levels in check is important. Prior to bosses, you want to keep your character power level 1 level below the level of the zone you're in. This will help to ensure you don't accidentally overlevel the current zone and mistakenly push up the power level of the next zone you enter. Once you reach a boss zone, you can freely upgrade your weapons to match, but not exceed, the boss power level.
 
 ## Picking an archetype
 
