--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -42,9 +42,7 @@ Power levels are important for hardcore because it will help you to keep the dif
 
 ### How do I manage power levels?
 
-Generally speaking, you don't need to worry too much about your archetype power levels, as they level quite slowly. You can keep a [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic) active without much concern.
-
-However, keeping your weapon levels in check is important. Prior to bosses, you want to keep your character power level 1 level below the level of the zone you're in. This will help to ensure you don't accidentally overlevel the current zone and mistakenly push up the power level of the next zone you enter. Once you reach a boss zone, you can freely upgrade your weapons to match, but not exceed, the boss power level.
+Generally speaking, you don't need to worry too much about your archetype power levels, as they level quite slowly. You will want to be sure when levelling your weapons to try and keep your power level at the same power level of the zone you're in. Be sure to keep checking your power level as you level your weapons.
 
 ## Picking an archetype
 
@@ -86,7 +84,7 @@ You can pick up a second archetype as soon as you have 1500x Scrap and 5 Lumenit
 
 When you first load into town, it is suggested that you:
 
-- Sell any items you don't need, which is generally everything except for your Mudtooth's Tonics.
+- Sell all items that you start with to get scrap to get other more important starting items.
 - Craft the Healing Shot mod to help supplement your heals.
 - If you are able, you should also craft Hot Shot to further increase your damage output.
 - If you have item unlocks from other characters, pick up helpful items from Reggie, such as [Black Cat Band](https://remnant.wiki/Black_Cat_Band).
