Added hardcore veteran guide

--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -1,14 +1,14 @@
 # Hardcore Veteran Guide
 
-**This guide is incomplete. If you somehow found this, please do not use it as a reference.**
-
 Guide by: Multiple users in the community
 
-_Last updated: 2024-03-23_
+_Last updated: 2024-03-25_
 
 ## Introduction
 
 This guide is intended to help players who have some experience with the game, but are new to hardcore. It is not a complete guide to the game, nor is it an exhaustive list of the many strategies you can use to clear hardcore veteran. It is intended to be an opinionated guide to best help you complete your hardcore veteran run.
+
+_Note: This is the first version of this guide. It is a work in progress and will be updated as needed. See an issue or want to contribute? Please open a pull request, or [join the Toolkit Discord](https://discord.gg/kgVaU3zAQ7)_
 
 ## General tips
 
