Small update to hardcore veteran guide

--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -2,7 +2,7 @@
 
 Guide by: Multiple users in the community
 
-_Last updated: 2024-03-25_
+_Last updated: 2024-03-26_
 
 ## Introduction
 
@@ -17,6 +17,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
+- Only go for progression dungeons and not side dungeons.
 - You can farm the Preacher in **Losomn - Forlorn Coast** to level 3 mutators up to level 10. These do not count towards your power level.
 - Gravity kills! Be sure to check down below before dropping off ledges or jumping down!
 - Be sure to keep your game **offline**. Randoms can teamkill you and it will count as a hardcore death.
