--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -18,6 +18,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
 - Only go for progression dungeons and not side dungeons.
+- Sell boss rewards to give yourself some additional scrap.
 - You can farm the Preacher in **Losomn - Forlorn Coast** to level 3 mutators up to level 10. These do not count towards your power level.
 - Gravity kills! Be sure to check down below before dropping off ledges or jumping down!
 - Be sure to keep your game **offline**. Randoms can teamkill you and it will count as a hardcore death.
