Squashed commit of the following:
commit b8b3b27fe5bfd7f15b4b71a7fd97108e3d5d6500
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Tue Mar 26 20:42:15 2024 -0400

    Finalized changes to files

commit 14b05f265ed67dae5aaa11824150c9b774a6942e
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Tue Mar 26 19:54:37 2024 -0400

    Added foundation for hunter changes

--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -36,12 +36,25 @@ _Last updated: 2024-03-05_
 ### Explorer
 
 - Skills
-  - Gold Digger - 5m > 10m **Resonance**
+  - Gold Digger - 5m -> 10m **Resonance**
 - Perks
   - Magnetic Field 2.5m -> 3.75m **Resonance**
-- Hunter
-  - Skills
-    - Hunter's Shroud - 10m > 15m **Resonance**
+
+### Handler
+
+- Skills
+  - Guard Dog - 20m -> 30m **Resonance**
+  - Support Dog - 20m -> 30m **Resonance**
+  - Attack Dog - 20m -> 30m **Resonance**
+- Perks
+
+  - Spirit of the Wolf - 10m -> 15m **Resonance**
+  - Pack Hunter - 40m -> 60m **Resonance**
+
+### Hunter
+
+- Skills
+  - Hunter's Shroud - 10m > 15m **Resonance**
 
 ### Medic
 
