Fixed world save archive incorrect file

--- a/src/app/world-save-archive/instructions/page.mdx
+++ b/src/app/world-save-archive/instructions/page.mdx
@@ -41,6 +41,16 @@ I mean it! Follow the above instructions to back up your existing world save fir
 3. Rename the downloaded world save to `save_X.sav`, replacing `X` with the character slot you want to use.
 4. Copy and paste the downloaded world save into the folder.
 
+## FAQ
+
+### Can I use these world saves to get items?
+
+Do whatever you want with the save, but we don't support it, so don't ask!
+
+### Can I play the campaign from the save?
+
+Sure, but we don't suppor it, so don't ask!
+
 ## Troubleshooting
 
 If you're having trouble, you should keep making new characters until you have 5 total characters, and then try again.
