--- a/src/app/world-save-archive/instructions/page.mdx
+++ b/src/app/world-save-archive/instructions/page.mdx
@@ -45,11 +45,11 @@ I mean it! Follow the above instructions to back up your existing world save fir
 
 ### Can I use these world saves to get items?
 
-Do whatever you want with the save, but we don't support it, so don't ask!
+Yes, you can, but this isn't the purpose of these save files and we'll not provide support in this case.
 
 ### Can I play the campaign from the save?
 
-Sure, but we don't suppor it, so don't ask!
+Yes, you can, but this isn't the purpose of these save files and we'll not provide support in this case.
 
 ## Troubleshooting
 
