added guardians call and fury

--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -123,6 +123,8 @@ _Last updated: 2024-03-05_
 - Defrag - 5m > 7.5m **Resonance**
 - Familiar - 10m > 15m **Resonance**
 - Firestorm - 10m(?) > 15m **Amplitude**
+- Guardian's Call -3m > 4.5m **Amplitude**
+- Guardian's Fury - 3.5m > 5.25m **Amplitude**
 - Nano Phase - 2m > 3m **Amplitude**
 - Prismatic Driver - 3m > 4.5m **Amplitude**
 - Ring of Spears - Massive, Yo! **Resonance**
