--- a/src/app/guides/amplitude-vs-resonance/page.mdx
+++ b/src/app/guides/amplitude-vs-resonance/page.mdx
@@ -103,12 +103,9 @@ _Last updated: 2024-03-05_
 ## Hand Guns
 
 - Corrupted Meridian - 3.5m > 5.25m **Amplitude**
-- Corrupted Rune Pistol - (Deathbrand) 25m > 37m **Resonance**
 - Enigma - 7.5m/10m > 11.2m/15m **Amplitude**
 - Meridian - 4m/2.5m > 6m/3.75m **Amplitude**
-- Rune Pistol - (Soulbrand) 25m > 37.5m **Resonance**
-- Star Shot - 5m > 7.5m **Amplitude**
-- Starshot (Primary Fire) Explosion from impact 1m -> 1.5m **Amplitude**
+- Starshot - Explosion from impact 1m -> 1.5m **Amplitude**
 
 ## Melee
 
@@ -117,9 +114,11 @@ _Last updated: 2024-03-05_
 
 ## Weapon Mods
 
+- Big Bang - 5m > 7.5m **Amplitude**
 - Concussive Shot - 8m > 12m **Resonance**
 - Creeping Mist - 7.5m/15m > 11.25m/22.5m **Amplitude**
 - Cube Room - 5m > 7.5m **Amplitude**
+- Deathbrand - 25m > 37m **Resonance**
 - Defrag - 5m > 7.5m **Resonance**
 - Familiar - 10m > 15m **Resonance**
 - Firestorm - 10m(?) > 15m **Amplitude**
@@ -133,6 +132,7 @@ _Last updated: 2024-03-05_
 - Skewer 2.0 - 3m > 4.5m **Amplitude**
 - Song of Eafir - 10m/15m > 15m/22.5m **Amplitude**
 - Soulbinder - 7m > 10.5m **Resonance**
+- Soulbrand - 25m > 37.5m **Resonance**
 - Time Lapse - 6m > 9m **Resonance**
 - Tremor - 9m > 13.5m **Amplitude**
 - Voltaic Rondure - 3m > 4.5m **Resonance**
