--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -2,7 +2,7 @@
 
 Guide by: Multiple users in the community
 
-_Last updated: 2024-03-26_
+_Last updated: 2024-04-13_
 
 ## Introduction
 
@@ -17,6 +17,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
+- Max out Vigor as quickly as you can. If you get Meidra in Yaesha, grab Barkskin and level that up first.
 - Only go for progression dungeons and not side dungeons.
 - Sell boss rewards to give yourself some additional scrap.
 - You can farm the Preacher in **Losomn - Forlorn Coast** to level 3 mutators up to level 10. These do not count towards your power level.
@@ -24,6 +25,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 - Be sure to keep your game **offline**. Randoms can teamkill you and it will count as a hardcore death.
 - If you are unsure about certain boss fights, keeping a softcore character with the same skills and gear is a good idea to help you practice the fight.
 - Find yourself autopiloting or zoning out? Take a break! Autopilot is a good way to get yourself killed.
+- Don't be afraid to run from fights if you need to. You can always come back later when you're stronger.
 
 ## Understanding power levels
 
