updated FAQ for save archive

--- a/src/app/world-save-archive/instructions/page.mdx
+++ b/src/app/world-save-archive/instructions/page.mdx
@@ -43,6 +43,18 @@ I mean it! Follow the above instructions to back up your existing world save fir
 
 ## FAQ
 
+### What Power Level and difficulty is each file?
+
+All save files are on Apocalypse difficulty and Power Level 21. There are no plans to include other difficulties and Power Levels.
+
+### How do I submit a save file?
+
+At the moment we only accept submissions from a group of trusted contributors to ensure the quality and safety of all files. If you possess a large collection on save files you can join our discord and submit them for a review.
+
+### Do I have to own all DLCs to use these files?
+
+We do not seperate files by DLC requiremnt. If the file contains DLC content you don't own it won't work.
+
 ### Can I use these world saves to get items?
 
 Yes, you can, but this isn't the purpose of these save files and we'll not provide support in this case.
