--- a/src/app/world-save-archive/instructions/page.mdx
+++ b/src/app/world-save-archive/instructions/page.mdx
@@ -49,11 +49,11 @@ All save files are on Apocalypse difficulty and Power Level 21. There are no pla
 
 ### How do I submit a save file?
 
-At the moment we only accept submissions from a group of trusted contributors to ensure the quality and safety of all files. If you possess a large collection on save files you can join our discord and submit them for a review.
+At the moment we only accept submissions from a group of trusted contributors to ensure the quality and safety of all files. If you possess a large collection of save files you can join our discord and submit them for a review.
 
 ### Do I have to own all DLCs to use these files?
 
-We do not seperate files by DLC requiremnt. If the file contains DLC content you don't own it won't work.
+We do not seperate files by DLC requiremnt. If a file contains DLC content you don't own it won't work.
 
 ### Can I use these world saves to get items?
 
