--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -12,7 +12,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 
 ## General tips
 
-- Picking Apocalypse as your starting difficulty will give you extra gold awhen you first start. You can then reroll your campaign to veteran at the stone.
+- Picking Apocalypse as your starting difficulty will give you extra gold when you first start. You can then reroll your campaign to veteran at the stone.
 - If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
