deploying patch notes

--- a/src/app/guides/amplitude/page.mdx
+++ b/src/app/guides/amplitude/page.mdx
@@ -1,8 +1,8 @@
-# Amplitude vs Resonance (Updated for DLC)
+# Amplitude (Updated for DLC)
 
 Guide by: ThatGuyLegit, with contributions from ConRaven and Alexij.
 
-_Last updated: 2024-03-05_
+_Last updated: 2024-04-22_
 
 ## Archetypes
 
@@ -16,7 +16,7 @@ _Last updated: 2024-03-05_
   - Reality Rune - 7m > 10.5m **Amplitude**
   - Chaos Gate - 7m > 10.5m **Amplitude**
 - Havoc Form
-  - Aim - 3m > 4.5m **Resonance**
+  - Aim - 3m > 4.5m **Amplitude**
   - Dodge - 5m > 7.5m **Amplitude**
 
 ### Challenger
@@ -24,7 +24,7 @@ _Last updated: 2024-03-05_
 - Skills
   - War Stomp - 7.5m -> 11.25m **Amplitude**
 - Perks
-  - Intimidating Presence - 15m > 22.5m **Resonance**
+  - Intimidating Presence - 15m > 22.5m **Amplitude**
 
 ### Engineer
 
@@ -33,28 +33,28 @@ _Last updated: 2024-03-05_
   - Flame Turret _Range of acquired target_ 10m -> 15m _EST_ **Amplitude**
   - Flame Turret - 2m -> 3m **Amplitude**
 - Perks
-  - Magnetic Field 2.5m -> 3.75m **Resonance**
+  - Magnetic Field 2.5m -> 3.75m **Amplitude**
 
 ### Explorer
 
 - Skills
-  - Gold Digger - 5m -> 10m **Resonance**
+  - Gold Digger - 5m -> 10m **Amplitude**
 
 ### Handler
 
 - Skills
-  - Guard Dog - 20m -> 30m **Resonance**
-  - Support Dog - 20m -> 30m **Resonance**
-  - Attack Dog - 20m -> 30m **Resonance**
+  - Guard Dog - 20m -> 30m **Amplitude**
+  - Support Dog - 20m -> 30m **Amplitude**
+  - Attack Dog - 20m -> 30m **Amplitude**
 - Perks
 
-  - Spirit of the Wolf - 10m -> 15m **Resonance**
-  - Pack Hunter - 40m -> 60m **Resonance**
+  - Spirit of the Wolf - 10m -> 15m **Amplitude**
+  - Pack Hunter - 40m -> 60m **Amplitude**
 
 ### Hunter
 
 - Skills
-  - Hunter's Shroud - 10m > 15m **Resonance**
+  - Hunter's Shroud - 10m > 15m **Amplitude**
 
 ### Medic
 
@@ -86,7 +86,7 @@ _Last updated: 2024-03-05_
 
 ## Rings
 
-- Guardian's Ring - 15m > 22.5m **Resonance**
+- Guardian's Ring - 15m > 22.5m **Amplitude**
 - Feedback Loop - 3m > 4.5m **Amplitude**
 
 ## Relics
@@ -97,7 +97,7 @@ _Last updated: 2024-03-05_
 
 - Sagittarius - 7m/2m > 10.5m/3m **Amplitude**
 - Twisted Arbalest - 3m > 4.5m **Amplitude**
-- Sporebloom - Spore cloud effect **Resonance**
+- Sporebloom - Spore cloud effect **Amplitude**
   - Note: Sporebloom's AoE is not affected by Amplitude
 
 ## Hand Guns
@@ -109,36 +109,36 @@ _Last updated: 2024-03-05_
 
 ## Melee
 
-- Dreamcatcher - 20m > 30m **Resonance**
+- Dreamcatcher - 20m > 30m **Amplitude**
 - Labyrinth Staff - 2m > 3m **Amplitude**
 
 ## Weapon Mods
 
 - Big Bang - 5m > 7.5m **Amplitude**
-- Concussive Shot - 8m > 12m **Resonance**
+- Concussive Shot - 8m > 12m **Amplitude**
 - Creeping Mist - 7.5m/15m > 11.25m/22.5m **Amplitude**
 - Cube Room - 5m > 7.5m **Amplitude**
-- Deathbrand - 25m > 37m **Resonance**
-- Defrag - 5m > 7.5m **Resonance**
-- Familiar - 10m > 15m **Resonance**
+- Deathbrand - 25m > 37m **Amplitude**
+- Defrag - 5m > 7.5m **Amplitude**
+- Familiar - 10m > 15m **Amplitude**
 - Firestorm - 10m(?) > 15m **Amplitude**
 - Guardian's Call -3m > 4.5m **Amplitude**
 - Guardian's Fury - 3.5m > 5.25m **Amplitude**
 - Nano Phase - 2m > 3m **Amplitude**
 - Prismatic Driver - 3m > 4.5m **Amplitude**
-- Ring of Spears - Massive, Yo! **Resonance**
+- Ring of Spears - Massive, Yo! **Amplitude**
 - Rotted Arrow - 4m > 6m **Amplitude**
-- Scrap Shot - 6m > 9m **Resonance**
+- Scrap Shot - 6m > 9m **Amplitude**
 - Skewer 2.0 - 3m > 4.5m **Amplitude**
 - Song of Eafir - 10m/15m > 15m/22.5m **Amplitude**
-- Soulbinder - 7m > 10.5m **Resonance**
-- Soulbrand - 25m > 37.5m **Resonance**
-- Time Lapse - 6m > 9m **Resonance**
+- Soulbinder - 7m > 10.5m **Amplitude**
+- Soulbrand - 25m > 37.5m **Amplitude**
+- Time Lapse - 6m > 9m **Amplitude**
 - Tremor - 9m > 13.5m **Amplitude**
-- Voltaic Rondure - 3m > 4.5m **Resonance**
+- Voltaic Rondure - 3m > 4.5m **Amplitude**
 - Supernova 4m -> 6m **Amplitude**
 - Explosive Shot 9m -> 13.5m **Amplitude**
-- Gas Giant 3m -> 4.5m **Resonance**
+- Gas Giant 3m -> 4.5m **Amplitude**
 
 ## Mutators
 
