--- a/src/app/guides/amplitude/page.mdx
+++ b/src/app/guides/amplitude/page.mdx
@@ -1,147 +1,3 @@
-# Amplitude (Updated for DLC)
+# Amplitude Guide
 
-Guide by: ThatGuyLegit, with contributions from ConRaven and Alexij.
-
-_Last updated: 2024-04-22_
-
-## Archetypes
-
-### Alchemist
-
-- Skills (All) **Amplitude**
-
-### Archon
-
-- Skills
-  - Reality Rune - 7m > 10.5m **Amplitude**
-  - Chaos Gate - 7m > 10.5m **Amplitude**
-- Havoc Form
-  - Aim - 3m > 4.5m **Amplitude**
-  - Dodge - 5m > 7.5m **Amplitude**
-
-### Challenger
-
-- Skills
-  - War Stomp - 7.5m -> 11.25m **Amplitude**
-- Perks
-  - Intimidating Presence - 15m > 22.5m **Amplitude**
-
-### Engineer
-
-- Skills
-  - Impact Cannon **Amplitude**
-  - Flame Turret _Range of acquired target_ 10m -> 15m _EST_ **Amplitude**
-  - Flame Turret - 2m -> 3m **Amplitude**
-- Perks
-  - Magnetic Field 2.5m -> 3.75m **Amplitude**
-
-### Explorer
-
-- Skills
-  - Gold Digger - 5m -> 10m **Amplitude**
-
-### Handler
-
-- Skills
-  - Guard Dog - 20m -> 30m **Amplitude**
-  - Support Dog - 20m -> 30m **Amplitude**
-  - Attack Dog - 20m -> 30m **Amplitude**
-- Perks
-
-  - Spirit of the Wolf - 10m -> 15m **Amplitude**
-  - Pack Hunter - 40m -> 60m **Amplitude**
-
-### Hunter
-
-- Skills
-  - Hunter's Shroud - 10m > 15m **Amplitude**
-
-### Medic
-
-- Skills
-  - Wellspring - 3m > 4.5m **Amplitude**
-  - Healing Shield - 25m > 37.5m **Amplitude**
-  - Redemption - 30m > 45m **Amplitude**
-
-### Ritualist
-
-- Perks
-  - Vile - 15m > 22.5m **Amplitude**
-- Skills
-  - Eruption - 1m/15m > 1.5m/22.5m **Amplitude**
-  - Miasma - 15m > 22.5m **Amplitude**
-
-### Summoner
-
-- Skills
-  - Hollow - 5m > 7.5m **Amplitude**
-  - Flyer - 3m > 4.5m **Amplitude**
-  - Frank - 6m > 9m
-
-### Amulets
-
-- Night Weaver's Grudge - 15m > 22.5m **Amplitude**
-- Toxic Release Valve - 7m > 10.5m **Amplitude**
-- Cleansing Stone - 20m > 30m **Amplitude**
-
-## Rings
-
-- Guardian's Ring - 15m > 22.5m **Amplitude**
-- Feedback Loop - 3m > 4.5m **Amplitude**
-
-## Relics
-
-- Tormented Heart - 10m > 15m **Amplitude**
-
-## Long Guns
-
-- Sagittarius - 7m/2m > 10.5m/3m **Amplitude**
-- Twisted Arbalest - 3m > 4.5m **Amplitude**
-- Sporebloom - Spore cloud effect **Amplitude**
-  - Note: Sporebloom's AoE is not affected by Amplitude
-
-## Hand Guns
-
-- Corrupted Meridian - 3.5m > 5.25m **Amplitude**
-- Enigma - 7.5m/10m > 11.2m/15m **Amplitude**
-- Meridian - 4m/2.5m > 6m/3.75m **Amplitude**
-- Starshot - Explosion from impact 1m -> 1.5m **Amplitude**
-
-## Melee
-
-- Dreamcatcher - 20m > 30m **Amplitude**
-- Labyrinth Staff - 2m > 3m **Amplitude**
-
-## Weapon Mods
-
-- Big Bang - 5m > 7.5m **Amplitude**
-- Concussive Shot - 8m > 12m **Amplitude**
-- Creeping Mist - 7.5m/15m > 11.25m/22.5m **Amplitude**
-- Cube Room - 5m > 7.5m **Amplitude**
-- Deathbrand - 25m > 37m **Amplitude**
-- Defrag - 5m > 7.5m **Amplitude**
-- Familiar - 10m > 15m **Amplitude**
-- Firestorm - 10m(?) > 15m **Amplitude**
-- Guardian's Call -3m > 4.5m **Amplitude**
-- Guardian's Fury - 3.5m > 5.25m **Amplitude**
-- Nano Phase - 2m > 3m **Amplitude**
-- Prismatic Driver - 3m > 4.5m **Amplitude**
-- Ring of Spears - Massive, Yo! **Amplitude**
-- Rotted Arrow - 4m > 6m **Amplitude**
-- Scrap Shot - 6m > 9m **Amplitude**
-- Skewer 2.0 - 3m > 4.5m **Amplitude**
-- Song of Eafir - 10m/15m > 15m/22.5m **Amplitude**
-- Soulbinder - 7m > 10.5m **Amplitude**
-- Soulbrand - 25m > 37.5m **Amplitude**
-- Time Lapse - 6m > 9m **Amplitude**
-- Tremor - 9m > 13.5m **Amplitude**
-- Voltaic Rondure - 3m > 4.5m **Amplitude**
-- Supernova 4m -> 6m **Amplitude**
-- Explosive Shot 9m -> 13.5m **Amplitude**
-- Gas Giant 3m -> 4.5m **Amplitude**
-
-## Mutators
-
-- Killswitch - 7m > 10m **Amplitude**
-- Shocker - 7.5m > 11.25m **Amplitude**
-- Timewave - 7.5m > 11.25m **Amplitude**
+This guide has been deprecated and is no longer necessary.
