Updated the hardcore veteran guide

--- a/src/app/guides/hardcore-veteran/page.mdx
+++ b/src/app/guides/hardcore-veteran/page.mdx
@@ -2,7 +2,7 @@
 
 Guide by: Multiple users in the community
 
-_Last updated: 2024-04-13_
+_Last updated: 2024-06-14_
 
 ## Introduction
 
@@ -13,6 +13,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 ## General tips
 
 - Picking Apocalypse as your starting difficulty will give you extra gold when you first start. You can then reroll your campaign to veteran at the stone.
+- Starting on Survivor difficulty is a viable strategy for levelling up your character and getting some items before switching to Veteran. For example, you can get the Thaen Seed and plant it in the Ward before swapping to Veteran.
 - If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
@@ -67,6 +68,10 @@ Engineer has a turret and the Fortify trait for some extra tankiness. The turret
 
 Handler is an excellent choice for your hardcore run. When equipped as the primary archetype, your dog will revive you when you die. This can definitely be a lifesaver, as the cooldown is much shorter than the cheat death provider by the Challenger archetype.
 
+### Invoker
+
+Invoker is the latest addition to the pool, and it is an incredibly strong choice due to the immediate access to Way of Kaeula and the Haste gains.
+
 ### Medic
 
 Medic can be a strong choice for the self-healing potential for you (and your allies if you are playing with a group).
@@ -77,7 +82,9 @@ Ritualist is the newest archetype at time of writing, and it offers a strong cho
 
 ## Recommended archetypes
 
-This guide recommends starting with Engineer, and then picking up Handler as your second archetype. Once you have the Handler, swap it to your primary archetype and put Engineer on your secondary.
+This guide recommends starting with Invoker if you have access to it, and then getting Ritualist as the second archetype if you are comfortable without the safety net. If you want the safety net, using Challenger or Handler as your secondary archetype is recommended.
+
+If you don't have access to Invoker, this guide recommends starting with Engineer, and then picking up Handler as your second archetype. Once you have the Handler, swap it to your primary archetype and put Engineer on your secondary.
 
 ## Acquiring your second archetype
 
