minor bug fixes

--- a/src/app/world-save-archive/instructions/page.mdx
+++ b/src/app/world-save-archive/instructions/page.mdx
@@ -53,7 +53,7 @@ At the moment we only accept submissions from a group of trusted contributors to
 
 ### Do I have to own all DLCs to use these files?
 
-We do not seperate files by DLC requiremnt. If a file contains DLC content you don't own it won't work.
+We do not seperate files by DLC requirement. If a file contains DLC content you don't own it won't work.
 
 ### Can I use these world saves to get items?
 
