--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -2,13 +2,13 @@
 
 Guide by: Multiple users in the community
 
-_Last updated: 2024-06-14_
+_Last updated: 2024-09-14_
 
 ## Introduction
 
 This guide is intended to help players who have some experience with the game, but are new to hardcore. It is not a complete guide to the game, nor is it an exhaustive list of the many strategies you can use to clear hardcore veteran. It is intended to be an opinionated guide to best help you complete your hardcore veteran run.
 
-_Note: This is the first version of this guide. It is a work in progress and will be updated as needed. See an issue or want to contribute? Please open a pull request, or [join the Toolkit Discord](https://discord.gg/kgVaU3zAQ7)_
+_Note: This is a constantly evolving guide. It is a work in progress and will be updated as needed. See an issue or want to contribute? Please open a pull request, or [join the Toolkit Discord](https://discord.gg/kgVaU3zAQ7)_
 
 ## General tips
 
@@ -17,7 +17,7 @@ _Note: This is the first version of this guide. It is a work in progress and wil
 - If you want additional easy gold at the start, roll for **Yaesha - Forgotten Grove** or **Yaesha - Red Throne** for 1-3 chests if you want starting money. You can pick up the chests and then reroll campaign again.
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
-- Once you have 1500x Scrap and 5 Lumenite, you can get your second archetype.
+- Once you have 1500x Scrap and 5x Lumenite, you can get your second archetype.
 - Max out Vigor as quickly as you can. If you get Meidra in Yaesha, grab Barkskin and level that up first.
 - Only go for progression dungeons and not side dungeons.
 - Sell boss rewards to give yourself some additional scrap.
@@ -82,13 +82,21 @@ Ritualist is the newest archetype at time of writing, and it offers a strong cho
 
 ## Recommended archetypes
 
-This guide recommends starting with Invoker if you have access to it, and then getting Ritualist as the second archetype if you are comfortable without the safety net. If you want the safety net, using Challenger or Handler as your secondary archetype is recommended.
+### If you don't need a safety net...
+
+This guide recommends starting with Invoker if you have access to it, and then purchasing Ritualist as soon as you are able. Once you have both archetypes, you should equip Ritualist as your primary archetype, and Invoker as your secondary archetype.
+
+### If you want a safety net...
+
+If you want the safety net, using Challenger or Handler as your secondary archetype is recommended.
+
+### If you don't have access to Invoker...
 
 If you don't have access to Invoker, this guide recommends starting with Engineer, and then picking up Handler as your second archetype. Once you have the Handler, swap it to your primary archetype and put Engineer on your secondary.
 
 ## Acquiring your second archetype
 
-You can pick up a second archetype as soon as you have 1500x Scrap and 5 Lumenite. You can then purchase the item from either Wallace or one of the in town vendors. It is recommended that you do this as soon as you have the materials for it.
+You can pick up a second archetype as soon as you have 1500x Scrap and 5x Lumenite. You can then purchase the item from either Wallace or one of the in town vendors. It is recommended that you do this as soon as you have the materials for it.
 
 ## First things to do in town
 
