Updated the hardcore veteran guide

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -2,7 +2,7 @@
 
 Guide by: Multiple users in the community
 
-_Last updated: 2024-09-14_
+_Last updated: 2024-10-16_
 
 ## Introduction
 
@@ -78,13 +78,13 @@ Medic can be a strong choice for the self-healing potential for you (and your al
 
 ### Ritualist
 
-Ritualist is the newest archetype at time of writing, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
+Ritualist is one of the newer archetypes, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
 
 ## Recommended archetypes
 
 ### If you don't need a safety net...
 
-This guide recommends starting with Invoker if you have access to it, and then purchasing Ritualist as soon as you are able. Once you have both archetypes, you should equip Ritualist as your primary archetype, and Invoker as your secondary archetype.
+This guide recommends starting with Invoker if you have access to it, and then purchasing Ritualist as soon as you are able. Once you have both archetypes, we recommend keeping Invoker as the primary due to the fact that the Invoker prime perk allows even more Way of Kaeula usage.
 
 ### If you want a safety net...
 
