Hardcore Veteran guide - Ahanae Crystal clarification and Dran Scavenger ring addition

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -123,7 +123,9 @@ The Forgotten Grove is a commonly recommended starting zone, as you can skip a w
 
 ## When you first reach Labyrinth
 
-Once you clear the first world on hardcore, you have unlocked the [Ahanae Crystal](https://remnant.wiki/Ahanae_Crystal) ring. You can purchase it from Reggie, and should consider doing so right away.
+If you've started your campaign at Yaesha, once you have cleared it on hardcore, you unlock the [Ahanae Crystal](https://remnant.wiki/Ahanae_Crystal) ring. You can purchase it from Reggie, and should consider doing so right away.
+
+Alternatively, if you chose to go through Losomn first, upon clearing it, you unlock the [Dran Scavenger Ring](https://remnant.wiki/Dran_Scavenger_Ring). This is another highly recommended immediate purchase as it will help sustain your health through scrap, iron and ammo pickups.
 
 Additionally, you can immediately get the [Energized Neck Coil](https://remnant.wiki/Energized_Neck_Coil) that can be quite helpful depending on your archetypes.
 
