Hardcore Veteran guide - Thaen Seed correction

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -119,7 +119,7 @@ The Forgotten Grove is a commonly recommended starting zone, as you can skip a w
 ### Red Palace tips
 
 - Be sure you are polite to the Empress in all dialogs so that you can earn the [Seal of the Empress](https://remnant.wiki/Seal_of_the_Empress) ring.
-- When you reach The Widow's Court, be sure to grab the [Ornate Lockbox](https://remnant.wiki/Ornate_Lockbox) and [Ornate Key](https://remnant.wiki/Ornate_Key) so that you can get the [Thaen Seed](https://remnant.wiki/Thaen_Seed) from the Empress. Planting this fruit in town will give you a cheat death fruit.
+- When you reach The Widow's Court, be sure to grab the [Ornate Lockbox](https://remnant.wiki/Ornate_Lockbox) and [Ornate Key](https://remnant.wiki/Ornate_Key) so that you can get the [Thaen Seed](https://remnant.wiki/Thaen_Seed) by interacting with the lockbox. Planting this fruit in town will give you access to a cheat death fruit in some time.
 
 ## When you first reach Labyrinth
 
