--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -18,7 +18,7 @@ _Note: This is a constantly evolving guide. It is a work in progress and will be
 - You should always have a concoction active, ideally [Mudtooth's Tonic](https://remnant.wiki/Mudtooth%27s_Tonic).
 - Items are account-wide, so check with Reggie, Cass, and Brabus to get specific items you might want to use.
 - Once you have 1500x Scrap and 5x Lumenite, you can get your second archetype.
-- Max out Vigor as quickly as you can. If you get Meidra in Yaesha, grab Barkskin and level that up first.
+- Max out Vigor as quickly as you can. If you get Meidra in Yaesha, grab Barkskin as it will prove helpful later on, but prioritize Vigor
 - Only go for progression dungeons and not side dungeons.
 - Sell boss rewards to give yourself some additional scrap.
 - You can farm the Preacher in **Losomn - Forlorn Coast** to level 3 mutators up to level 10. These do not count towards your power level.
