Hardcore Veteran guide - Scrap Shot over Hot Shot

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -104,7 +104,7 @@ When you first load into town, it is suggested that you:
 
 - Sell all items that you start with to get scrap to get other more important starting items.
 - Craft the Healing Shot mod to help supplement your heals.
-- If you are able, you should also craft Hot Shot to further increase your damage output.
+- If you are able, you should also craft Scrap Shot, as it provides both a powerful slow and DoT over an area.
 - If you have item unlocks from other characters, pick up helpful items from Reggie, such as [Black Cat Band](https://remnant.wiki/Black_Cat_Band).
 - You can get the [MP60-R](https://remnant.wiki/MP60-R) pistol for free in town if you don't like your starting pistol.
 
