Hardcore Veteran guide - Post labyrinth things

--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -133,8 +133,8 @@ Additionally, you can immediately get the [Energized Neck Coil](https://remnant.
 
 Once you have the [Biome Portal Key](https://remnant.wiki/Biome_Portal_Key), it is recommended that you do the following:
 
-- Grab the [Leto Mark II armor set](https://remnant.wiki/Leto_Mark_II_Armor).
-- Open the portals and touch the waypoint in each of the two worlds you can open up. This will lock the powerlevels for those zones ahead of time.
+- Grab the [Leto Mark II armor set](https://remnant.wiki/Leto_Mark_II_Armor) and [Chicago Typewriter](https://remnant.wiki/Chicago_Typewriter). If you plan to use this armor, also consider getting some combination of [Leto's Amulet](https://remnant.wiki/Leto%27s_Amulet), [Twisted Idol](https://remnant.wiki/Twisted_Idol) and [Dull Steel Ring](https://remnant.wiki/Dull_Steel_Ring) from the vendors at Ward 13, depending on what you have available to you.
+- Open the portals and touch the waypoint in each of the two worlds you can open up. This will lock the power levels for those zones ahead of time.
 
 ## Things to look out for as you progress
 
