--- a/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
+++ b/apps/remnant2toolkit/app/guides/hardcore-veteran/page.mdx
@@ -78,7 +78,7 @@ Medic can be a strong choice for the self-healing potential for you (and your al
 
 ### Ritualist
 
-Ritualist is one of the newer archetypes, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Ring, which you can purchase from Reggie in town as soon as you clear your first world in hardcore.
+Ritualist is one of the newer archetypes, and it offers a strong choice for a starting archetype. You start with the Sparkfire Shotgun, which is strong in Yaesha as almost everything there is weak to Fire. The Miasma ability, gained at Ritualist level 5, is great for clearing mobs and for gaining experience rapidly. Additionally, Ritualist works very well with the Energized Neck Coil, which is attainable as soon as you clear your first world and enter the Labyrinth. Lastly, Ritualist will benefit from the Ahanae Crystal ring, which you can purchase from Reggie in town as soon as you clear Yaesha in hardcore.
 
 ## Recommended archetypes
 
